--- a/myapp/myapp/templates/base.html
+++ b/myapp/myapp/templates/base.html
@@ -1,20 +1,22 @@
+<!-- templates/base.html -->
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Меню</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
-        <h1>Мое приложение</h1>
+        <h1> <a href="{% url 'home' %}"> Мое приложение</a> </h1>
     </header>
-
     <main>
         {% block content %}{% endblock %}
     </main>
-
     <footer>
-        <p>© 2025 Мое приложение</p>
+        <p>© {% now "Y" %} <a href="{% url 'home' %}">Мое приложение</a></p>
     </footer>
 </body>
 </html>
