--- a/myapp/myapp/templates/page3.html
+++ b/myapp/myapp/templates/page3.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Team</h1>
+  <h1>Page3</h1>
 
   {% load menu_tags %}
   {% draw_menu 'main_menu' as main_menu %}
   {% include "menu.html" with menu_items=main_menu.menu_items %}
+  {% draw_menu 'projects_menu' as projects_menu %}
+  {% include "menu.html" with menu_items=projects_menu.menu_items %}
 {% endblock %}
