--- a/myapp/myapp/templates/project1.html
+++ b/myapp/myapp/templates/project1.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>About</h1>
+  <h1>Project1</h1>
 
   {% load menu_tags %}
   {% draw_menu 'main_menu' as main_menu %}
